--- a/CSS/index.css
+++ b/CSS/index.css
@@ -125,8 +125,8 @@ nav {
 
 .top-article-dropdown-btn {
     font-weight: bold;
-    font-size: 3vw;
-    width: 60vw;
+    font-size: 20px;
+    width: 100vw;
     height: 70px;
     margin-top: 10px;
     margin-bottom: 10px;
@@ -134,14 +134,41 @@ nav {
 }
 
 .top-article-dropdown-menu {
-    width: 60vw;
+    width: 100vw;
     border-radius: 0px;
 }
 
 .top-article-dropdown-card {
-    width: 45vw;
+    width: 100vw;
+    height: 88vw;
+    margin-top: 30px;
+    border-radius: 0px;
+    padding: 8px;
+    text-decoration: none;
+    color: black;
 }
 
-.top-article-dropdown-card h3 {
-    margin: 0px;
+.list-card-title {
+    padding-top: 10px;
+    padding-bottom: 16px;
+    font-size: 6.5vw;
+}
+
+.list-card-subtitle {
+    font-size: 4vw;
+}
+
+.dropdown-item-card {
+    max-width: 100vw;
+}
+
+.card-img-dropdown {
+    height: 55vw;
+}
+
+.view-all-button {
+    width: 100vw;
+    font-size: 6vw;
+    text-decoration: none;
+    color: black;
 }
